--- a/available pets.html
+++ b/available pets.html
@@ -114,5 +114,66 @@
         </div>
       </div>
     </main>
+        <footer>
+      <div class="footer-container">
+        <div>
+          <div class="logo">
+            <img src="images/Logo.png" alt="logo" />
+            <h2>Pawsome Adopt</h2>
+          </div>
+          <p>
+            Connecting loving families with pets in need of forever homes. Every
+            adoption saves a life.
+          </p>
+          <div class="social-media">
+            <img src="images/facebook.png" alt="facebook logo" />
+            <img src="images/twitter.png" alt="twitter logo" />
+            <img src="images/Linkedin.png" alt="linkedin logo" />
+            <img src="images/instagram.png" alt="instagram logo" />
+          </div>
+        </div>
+
+        <div class="links">
+          <h3>Quick Links</h3>
+          <ul class="footer-nav">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li><a href="about.html">About</a></li>
+            <li>
+              <a href="available pets.html">Available Pets</a
+              >
+            </li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="volunter.html">Become a volunteer</a></li>
+          </ul>
+        </div>
+
+        <div class="contact-options">
+          <h3>Contact Us</h3>
+          <p>📍123 Pet Avenue,Animal City, AC 12345</p>
+          <p>📞(555) 123-4567</p>
+          <p>💌info@pawsomeadopt.com</p>
+        </div>
+
+        <div class="footer-card">
+          <h3>Ready to change a Life?</h3>
+          <p>
+            Start your journey today and give a pet the loving home theydeserve.
+            Together, we can make a difference!
+          </p>
+          <div class="cta-container">
+            <a href="pets.html"><button class="cta main-cta">Browse Pets</button></a>
+            <a href="/volunteer/volunter.html"><button class="cta secondary-cta">Become a volunteer</button></a>
+          </div>
+        </div>
+      </div>
+      <hr />
+
+      <div class="copyright">
+        <p>Made with ❤️ for animals in need</p>
+        <p>©2025 PawsomeAdopt. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
